--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 <body>
     <section class="content">
         <h1>Pokedex</h1>
-        
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
@@ -33,7 +32,7 @@
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
-                Veja Mais
+                Load More
             </button>
         </div>
     </section>
