--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
-                Load More
+                Veja Mais
             </button>
         </div>
     </section>
@@ -41,6 +41,7 @@
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pokemon-model.js"></script>
 </body>
 
 </html>
